@@ -3,12 +3,13 @@ package ee.bitweb.core.audit;
 import ee.bitweb.core.audit.mappers.*;
 import lombok.Getter;
 import lombok.Setter;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.validation.annotation.Validated;
 
-import javax.validation.constraints.NotBlank;
-import javax.validation.constraints.NotNull;
-import javax.validation.constraints.Positive;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Positive;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -19,26 +20,27 @@ import static ee.bitweb.core.audit.AuditLogProperties.PREFIX;
 @Setter
 @Validated
 @ConfigurationProperties(PREFIX)
+@ConditionalOnProperty(value = PREFIX + ".auto-configuration", havingValue = "true")
 public class AuditLogProperties {
 
-    public static final String PREFIX = "ee.bitweb.core.audit";
+    static final String PREFIX = "ee.bitweb.core.audit";
 
     private boolean autoConfiguration = false;
 
     @Positive
-    private long maxLoggableResponseSize = 1024 * 3L;
+    private long maxLoggableResponseSize = 1024 * 10L;
 
     @Positive
-    private long maxLoggableRequestSize = 1024 * 3L;
+    private long maxLoggableRequestSize = 1024 * 10L;
 
     @NotNull
-    private List<@NotBlank String> requestHeaders = new ArrayList<>(Arrays.asList("User-Agent", "Origin"));
+    private List<@NotBlank String> requestHeaders = new ArrayList<>(List.of("User-Agent", "Origin"));
 
     @NotNull
     private List<@NotBlank String> responseHeaders = new ArrayList<>();
 
     @NotNull
-    private List<@NotBlank String> sensitiveHeaders = new ArrayList<>(Arrays.asList("authorization"));
+    private List<@NotBlank String> sensitiveHeaders = new ArrayList<>(List.of("authorization"));
 
     @NotNull
     private List<@NotBlank String> mappers = new ArrayList<>(
@@ -47,6 +49,7 @@ public class AuditLogProperties {
                     RequestHeadersMapper.KEY,
                     RequestMethodMapper.KEY,
                     RequestUrlDataMapper.KEY,
+                    RequestBodyMapper.KEY,
                     ResponseBodyMapper.KEY,
                     ResponseStatusMapper.KEY,
                     TraceIdMapper.KEY
@@ -54,8 +57,7 @@ public class AuditLogProperties {
     );
 
     @NotNull
-    private List<String> blacklist = new ArrayList<>(Arrays.asList("/actuator/"));
+    private List<String> blacklist = new ArrayList<>(List.of("/actuator/"));
 
     private boolean includeDuration = true;
-    private boolean includeDefaultMappers = true;
 }
